src/main/java/com/example/trackon/error/ErrorResponse.java
package com.example.trackon.error;

import lombok.Builder;
import lombok.Getter;

@Getter
@Builder
public class ErrorResponse {
    private int status;
    private String message;
}
